[package]
name = "spiderq"
version = "1.3.7"
authors = ["Alexey Voznyuk <me@swizard.info>"]
edition = "2018"

[dependencies]
getopts = "^0.2"
byteorder = "^0.4"
time = "^0.1"
tempdir = "^0.3"
zmq = "^0.8"
simple-signal = "^1.1"
spiderq_proto = { path = "spiderq-proto" }

[dev-dependencies]
rand = "^0.3"
