[package]
name = "spiderq"
version = "1.3.7"
authors = ["Alexey Voznyuk <me@swizard.info>"]
edition = "2018"

[dependencies]
getopts = "^0.2"
byteorder = "^0.4"
time = { version = "^0.2", features = ["serde"] }
tempdir = "^0.3"
zmq = "^0.8"
simple-signal = "^1.1"
sled = "0.32.0-rc1"
bincode = "1.2"
quickcheck = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
spiderq_proto = { path = "spiderq-proto" }

[dev-dependencies]
rand = "^0.7"
